Added results hint to quiz completion; adjusted HTML structure and CSS for consistency.

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <section id="quiz-section">
             <h2>What's Your Primary Love Language?🔍</h2>
             <div id="quiz-container">
+                <div id="question-counter"></div>
                 <div id="question-display">Click Start Quiz to Begin</div>
                 <div id="options-container">
                     <button class="option" data-value="0">Option 1</button>
@@ -35,6 +36,7 @@
                     <button class="option" data-value="2">Option 3</button>
                 </div>
                 <button id="start-quiz">Start Quiz</button>
+                <div id="results-hint" style="display: none;">See your results below!</div>
             </div>
         </section>
 
