Hid quiz options before start; improved quiz logic.

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
                 <div id="question-counter"></div>
                 <div id="question-display">Click Start Quiz to Begin</div>
                 <div id="options-container">
-                    <button class="option" data-value="0">Option 1</button>
-                    <button class="option" data-value="1">Option 2</button>
-                    <button class="option" data-value="2">Option 3</button>
+                    <button class="option hidden-option" data-value="0">Option 1</button>
+                    <button class="option hidden-option" data-value="1">Option 2</button>
+                    <button class="option hidden-option" data-value="2">Option 3</button>
                 </div>
                 <button id="start-quiz">Start Quiz</button>
                 <div id="results-hint" style="display: none;">See your results below!</div>
